# TD-Faust

./: .gitignore  .gitmodules  CMakeLists.txt  FaustLib.cmake  LICENSE  README.md  SketchSynth.toe  SoundDesign.toe  TD-Faust.toe  basicWidgets.tox  build_macos.sh  build_tdfaust.py  build_windows.bat  faust2td.py  reverb.dsp  vrHMD.tox
.github/workflows/: all.yml
Plugins/: .gitignore
TD-Faust/: FaustCHOP.cpp  FaustCHOP.h  Info.plist  faustchop_ui.cpp
assets/: .gitignore  Pink Floyd - On the Run.mid  README.md  download_bitklavier.py  make_wavecycles.py
assets/faustlibraries/: my_library.lib
dsp_output/: .gitignore
faust2touchdesigner/: CMakeLists.txt  template_FaustCHOP.cpp  template_FaustCHOP.h  template_faustaudio.h
install_script/: macos_install_python.py
scripts/: script_build_ui.py
toxes/FAUST/: FAUST.tox  FaustGlobal.py  main_faust_base.tox  script_build_ui.py
